--- a/index.html
+++ b/index.html
@@ -6,11 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- bootstrap from dist from module from npm -->
-    <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css">
     <!-- <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.css"> -->
+    <!-- <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css"> -->
+    <!-- with CDN -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <!--  font-awesome from module from npm to be included-->
-    <link rel="stylesheet" href="./node_modules/@fortawesome/fontawesome-free/css/all.min.css">
-    <!-- my stylesheet ,normal way to includ ,without sass-->
+    <!-- <link rel="stylesheet" href="./node_modules/@fortawesome/fontawesome-free/css/all.min.css"> -->
+    <!-- dcn -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous"/>
+    <!-- my stylesheet -->
     <link rel="stylesheet" href="./style.css">
     <!-- google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -501,9 +505,13 @@
     <!-- -------------------------------------------------------------------------------------------------------------------- -->
     <!-- bootstrap js from dist from module from npm -->
     <!-- <script src=" ./node_modules/bootstrap/dist/js/bootstrap.bundle.js "></script> -->
-    <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js "></script>
+    <!-- <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js "></script> -->
+    <!-- UPDATE -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <!--  for font awesome JS to rendering as svg // from dist from module from npm -->
-    <script src="./node_modules/@fortawesome/fontawesome-free/js/all.min.js "></script>
+    <!-- <script src="./node_modules/@fortawesome/fontawesome-free/js/all.min.js "></script> -->
+    <!-- update -->
+    <script defer src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" integrity="sha384-rOA1PnstxnOBLzCLMcre8ybwbTmemjzdNlILg8O7z1lUkLXozs4DHonlDtnE7fpc" crossorigin="anonymous"></script>
     <!-- my script -->
     <script src="./index.js"></script>
 </body>
